Header files in GraalVM CContext must be surrounded by diamonds